feat: base blocks
